--- a/CodeChallenge4/css/standard.css
+++ b/CodeChallenge4/css/standard.css
@@ -1,7 +1,10 @@
 nav {
-    background-color: black;
+    background-color: #808080;
     display: flex;
-    justify-content: space-around;
+    justify-content:center;
+    position: fixed;
+    bottom: 0;
+    width:100%;
 }
 
 a {
@@ -10,5 +13,22 @@ a {
 }
 
 body{
-    background-image: url(/CodeChallenge3/images/kitten.jpg);
+    background-image: url(/CodeChallenge4/images/Pets.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+    width: 100%;
+    text-align: center;
+    font-family: "Open Sans";
+}
+
+.Title{
+    font-size: 3rem;
+    justify-content: center;
+    font-family: "Gloria Hallelujah";
+}
+
+.Subtitle{
+    font-size: 1.5rem;
+    text-align: center;
 }
