--- a/AirCV/style.css
+++ b/AirCV/style.css
@@ -9,7 +9,7 @@ body {
     border-bottom: .5px solid rgb(205, 205, 205);
 }
 
-ul {
+ol {
     display: flex;
     flex-direction: row;
     list-style-type: none;
@@ -73,7 +73,7 @@ h1 {
     display: flex;
     justify-content: space-between;
     width: 225px;
-    margin-bottom: 100px;
+    margin: 5px;
 }
 
 section{
@@ -101,4 +101,55 @@ footer{
     flex-direction: row;
     justify-content: space-between;
     align-items: baseline;
+    color: white;
+}
+
+@media screen and (max-width: 480px) {
+    .navContainer{
+        display: flex;
+        flex-direction: column;
+    }
+    ol {
+        display: flex;
+        flex-direction: column;
+        list-style-type: none;
+        padding: 0;
+        margin: 0;
+    }
+    li {
+        padding: 15px;
+        padding-left: 0;
+    }
+    img {
+        margin: 0;
+        padding: 0;
+    }
+    main {
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        margin-top: 0;
+        margin-left: 0;
+    }
+    .name {
+        font-size: 3rem;
+    }
+    .slogan {
+        font-size: 1rem;
+        padding-bottom: 30px;
+    }
+    section {
+        display: flex;
+        justify-content: flex-start;
+        flex-direction: column;
+    }
+    footer {
+        display: flex;
+        flex-direction: column;
+        font-size: .75rem;
+        margin-top: 20px;
+    }
+    h2, h3 {
+        margin-bottom: 0;
+    }
 }
