--- a/FinalProject/styles.css
+++ b/FinalProject/styles.css
@@ -1,17 +1,23 @@
-a{
+nav a{
     text-decoration: none;
+    padding: 10px;
 }
 
-ul{
+nav ul{
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-}
-
-li{
     list-style: none;
+} 
+
+nav li{
+    display: inline-block;
 }
 
-li:hover{
+nav a:hover{
     background-color: red;
+}
+
+.btnContent{
+    display: none
 }
